[gd_scene load_steps=6 format=3 uid="uid://c3dumw1oxc0ae"]

[ext_resource type="Texture2D" uid="uid://j743hycptogw" path="res://map.png" id="1_8gvnb"]
[ext_resource type="Script" path="res://Level.gd" id="2_mer64"]
[ext_resource type="PackedScene" uid="uid://drrk6iti1q01b" path="res://Enemy.tscn" id="2_r7uli"]

[sub_resource type="Curve2D" id="Curve2D_u4bxm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -53, 138, 0, 0, 0, 0, 242, 139, 0, 0, 0, 0, 316, 218, 0, 0, 0, 0, 318, 265, 0, 0, 0, 0, 369, 317, 0, 0, 0, 0, 496, 321, 0, 0, 0, 0, 544, 355, 0, 0, 0, 0, 545, 407)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_vqjbo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -53, 138, 0, 0, 0, 0, 242, 139, 0, 0, 0, 0, 275, 87, 0, 0, 0, 0, 384, 86, 0, 0, 0, 0, 453, 151, 0, 0, 0, 0, 474, 151, 0, 0, 0, 0, 560, 80, 0, 0, 0, 0, 561, 34, 0, 0, 0, 0, 581, 20, 0, 0, 0, 0, 583, -14)
}
point_count = 10

[node name="Level" type="Node2D"]
script = ExtResource("2_mer64")
enemyAsset = ExtResource("2_r7uli")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(422, 195)
texture = ExtResource("1_8gvnb")

[node name="Path2D1" type="Path2D" parent="."]
curve = SubResource("Curve2D_u4bxm")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_vqjbo")

[connection signal="timeout" from="Timer" to="." method="_on_enemy_spawn"]
